--- a/CSS BASIC 1/position.html
+++ b/CSS BASIC 1/position.html
@@ -8,21 +8,27 @@
     <style>
         .container {
             border: 2px solid black;
-            height: 500px;
-            width: 500px;
+            height: 250px;
+            width: 250px;
+            position: relative;
+            overflow: scroll;
         }
 
         .box{
             width: 100px;
             height: 100px;
         }
-
         .box1 {
             background-color: red; 
         }
+
         .box2 {
             background-color: green;
+            position: sticky;
+            top: 50px;
+            left:100px
         }
+
         .box3 {
             background-color: blue;
         }
