--- a/CSS BASIC 2/flexFlow.html
+++ b/CSS BASIC 2/flexFlow.html
@@ -6,15 +6,15 @@
     <title>Document</title>
     <style>
         .container{
-          display: flex;
-          flex-direction: row;  
-          border: 1px solid red;
-          color: rgb(99, 107, 5);
-          align-items: center;
-          height: 200px;
-          width: 200px;
-         flex-flow: row wrap;
-         justify-content: center;
+        flex-direction: row;  
+        display: flex;
+        border: 1px solid red;
+        color: rgb(99, 107, 5);
+        align-items: center;
+        height: 200px;
+        width: 200px;
+        flex-flow: row wrap;
+        justify-content: space-between; 
       }
       .item {
           width: 50px;
