--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-blue-400">
+<body class="bg-yellow-400">
     <h1 class="text-wrap">tailwind</h1>   
     <h1 class="text-pretty">Bye</h1>
     <h1 class="text-red-600">heleo aman</h1>
