--- a/PUBLIC/haring.html
+++ b/PUBLIC/haring.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WaitList Page</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
 <body class="bg-amber-50">
     <div class="min-h-screen px-6 py-3 flex flex-col gap-16 md:px-10 md:py-7 lg:px-16">
         <header class="flex justify-between">
@@ -31,7 +30,7 @@
                 <button class="btn">Join WaitList</button>
             </div>
             <div class="hidden">
-                <i class="fa-solid fs-bars"></i>
+                <i class="fa-solid fa-bars"></i>
             </div>
         </header>
         <main class="lg:flex">
