--- a/Projects/Analog Clock/index.html
+++ b/Projects/Analog Clock/index.html
@@ -13,6 +13,7 @@
         <div class="hour"></div>
         <div class="min"></div>
         <div class="sec"></div>
+        <div></div>
     </div>
 
     <div class="switch-cont">
