--- a/Projects/Analog Clock/index.html
+++ b/Projects/Analog Clock/index.html
@@ -10,9 +10,19 @@
     <div class="page-head" id="analogBgc">Analog Clock</div>
 
     <div class="clock" id="clockBgc">
+        <img src="./clock.png" alt="" srcset="">
         <div class="hour"></div>
         <div class="min"></div>
         <div class="sec"></div>
+    </div>
+    <div class="ttt">
+        <div class="time"></div>
+    </div>
+
+    <div>
+        <form action="">
+            <input class="name" "text" placeholder="MADE WITH ❤️ BY AMAN">
+        </form>
     </div>
 
     <div class="switch-cont">
