--- a/Projects/Image Search/index.html
+++ b/Projects/Image Search/index.html
@@ -9,13 +9,14 @@
 <body>
     <h1>Image Search Engine</h1>
     <form action="" id="search_form">
-        <input type="text" id="search-box" placeholder="Search Image Here..">
+        <input type="text" id="search_box" placeholder="Search Image Here..">
         <button>Search</button>
     </form>
 
     <div id="search_result">
-        <button id="show_more">Show More</button>
     </div>
+    <button id="show_more">Show More</button>
+
     <script src="script.js"></script>
 </body>
 </html>
