image search engine ready

--- a/Projects/Image Search/index.html
+++ b/Projects/Image Search/index.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="des">
+        <div class="ele">
+            <h4>Description :</h4>
+            <p>Here,You Can Find One of the Beatiful Images...</p>
+        </div>
+    </div>
+
+
     <h1>Image Search Engine</h1>
     <form action="" id="search_form">
-        <input type="text" id="search_box" placeholder="Search Image Here..">
+        <input type="text" id="search_box" placeholder="Search Image Here.." autocomplete="off">
         <button>Search</button>
     </form>
 
