--- a/Projects/Quiz Application/index.html
+++ b/Projects/Quiz Application/index.html
@@ -18,15 +18,27 @@
         </div>
 
         <div class="info-list">
-            <div class="info">1.You will have only 15sec For each Question.</div>
-            <div class="info">2.Once you select your answer, you can't undo.</div>
-            <div class="info">3.You can't select the optione, once time up.</div>
-            <div class="info">4.Only one option can be select.</div>
-            <div class="info">5.Can't Exit the Quiz While Palying.</div>
-            <div class="info">6.You will get 5 points on each right answer.</div>
+            <div class="info">
+                <p>1.You will have only 15sec For each Question.</p>
+            </div>
+            <div class="info">
+                <p>2.Once you select your answer, you can't undo.</p>
+            </div>
+            <div class="info">
+                <p>3.You can't select the optione, once time up.</p>
+            </div>
+            <div class="info">
+                <p>4.Only one option can be select.</p>
+            </div>
+            <div class="info">
+                <p>5.Can't Exit the Quiz While Playing.</p>
+            </div>
+            <div class="info">
+                <p>6.You will get 5 points on each right answer.</p>
+            </div>
         </div>
         <div class="button">
-            <button class="exit">Exit </button>
+            <button class="exit">Exit</button>
             <button class="continue">Continue</button>
         </div>
     </div>
